--- a/app/template/estrutura.html
+++ b/app/template/estrutura.html
@@ -1,19 +1,25 @@
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" type="text/css" href="semantic/semantic.min.css">
-        <script
-          src="https://code.jquery.com/jquery-3.1.1.min.js"
-          integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-          crossorigin="anonymous"></script>
-        <script src="semantic/semantic.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="css/style.css">
-        <title>projeto_rosaParks</title>
+
+        <link rel="stylesheet" type="text/css" href="/dist/semantic/semantic.min.css">        
+        <link rel="stylesheet" type="text/css" href="/dist/css/style.css">
+        <link rel="stylesheet" type="text/css" href="/dist/css/estrutura.css">
+        <link rel="icon" href="/img/logo-uneafro-small.jpg">
+
+        <title>Cursinho Rosa Parks</title>
     </head>
-    
-    <body class="masthead">
+    <body>
+
+        <figure class="item-fixo superior-esquerdo">
+            <!-- <img src="/img/uneafro_peq.png"> -->
+        </figure>
+
         {{CONTENT}}
+
     </body>
+    <script src="/dist/js/template/estrutura.js"></script>
 </html>
