incluir models Login e Registro

--- a/app/views/html/registroView.html
+++ b/app/views/html/registroView.html
@@ -176,8 +176,7 @@
 							type="text" 
 							class="caixa-baixa" 
 							name="EmailAdress"
-							id="EmailAdress" 
-							onchange="checkEmailAdress( this );" 
+							id="EmailAdress"
 						placeholder="Endereço E-mail">
 					</div>
 				</div>	<!-- ENDEREÇO EMAIL -->
@@ -270,6 +269,9 @@
 		</div>
 	</div>
 </div>
+<script>
+	const host = "{{MNEMONICO_URL_HOST}}";
+</script>
 <script src="/dist/js/jquery-3.4.1.min.js"></script>
 <script src="/dist/js/jquery.mask.js"></script>
 <script src="/dist/js/md5.min.js"></script>
