--- a/app/views/loginView.html.twig
+++ b/app/views/loginView.html.twig
@@ -1,4 +1,8 @@
-<div class="ui container" style="padding-top: 33vh">
+{% extends 'estrutura.html' %}
+{% block botaoLogout %}{% endblock %}
+{% block conteudoPagina %}
+<div style="height: 30%;"></div>
+<div class="ui container">
 	<div class="ui four column middle center aligned grid">
 		<div class="eleven wide mobile eight wide tablet four wide computer column">
 			<form class="ui form" id="FormView" name="FormView" method="POST">
@@ -41,3 +45,4 @@
 <script src="/dist/js/md5.min.js"></script>
 <script src="/dist/semantic/semantic.min.js"></script>
 <script src="/dist/js/views/loginView.js"></script>
+{% endblock %}
