--- a/app/views/loginView.html.twig
+++ b/app/views/loginView.html.twig
@@ -1,4 +1,4 @@
-{% extends 'estrutura.html' %}
+{% extends 'estrutura.html.twig' %}
 {% block botaoLogout %}{% endblock %}
 {% block conteudoPagina %}
 <div style="height: 30%;"></div>
