--- a/app/views/registroView.html.twig
+++ b/app/views/registroView.html.twig
@@ -271,6 +271,8 @@
 </div>
 <script>
 	const host = "{{urlHost}}";
+	const user = "{{API_USER}}";
+	const pass = "{{API_PASS}}";
 </script>
 <script src="/dist/js/jquery-3.4.1.min.js"></script>
 <script src="/dist/js/jquery.mask.js"></script>
