realizar registro via api

--- a/app/template/estrutura.html.twig
+++ b/app/template/estrutura.html.twig
@@ -36,4 +36,5 @@
 
     </body>
     <script src="/dist/js/template/estrutura.js"></script>
+    <script src="/dist/js/forEach.js"></script>
 </html>
