incluir listagem dos alunos para admins

--- a/app/template/estrutura.html.twig
+++ b/app/template/estrutura.html.twig
@@ -27,6 +27,12 @@
         </div>
         {% endblock %}
 
+        <div id="carregando" class="hide">
+            <div class="ui active dimmer">
+                <div class="ui massive text loader">Carregando...</div>
+            </div>
+        </div>
+
         {% block conteudoPagina %}
         {% endblock %}
 
