incluir consulta de usuarios via api para painel do admin

--- a/app/template/estrutura.html.twig
+++ b/app/template/estrutura.html.twig
@@ -29,7 +29,7 @@
 
         <div id="carregando" class="hide">
             <div class="ui active dimmer">
-                <div class="ui massive text loader">Carregando...</div>
+                <div class="ui massive text loader">Cursino Rosa Parks</div>
             </div>
         </div>
 
