--- a/app/views/loginView.html.twig
+++ b/app/views/loginView.html.twig
@@ -7,6 +7,7 @@
 		<div class="eleven wide mobile eight wide tablet four wide computer column">
 			<form class="ui form" id="FormView" name="FormView" method="POST">
 				<div class="field">
+					<h3>{{ MENSAGEM }}</h3>
 					<div class="ui large icon input">
 						<input 
 							type="text" 
@@ -39,6 +40,7 @@
 				<input type="hidden" name="getNewRegister" id="getNewRegister" value="false">
 			</form>
 		</div>
+		<div class="logoAutor"><p>Este software é gratúito, disponível em <b class="pointer" id="nomeAutor">github.com/vaiola3/projeto-rosa-parks</b></p></div>
 	</div>
 </div>
 <script src="/dist/js/jquery-3.4.1.min.js"></script>
