--- a/app/views/professorView.html.twig
+++ b/app/views/professorView.html.twig
@@ -4,15 +4,16 @@
 <div class="ui container">
 	<div class="ui four column middle center aligned grid">
 		<div class="eleven wide mobile eight wide tablet four wide computer column">
-			<h1>view aluno</h1>
+			<h1>view professor</h1>
 		</div>
 	</div>
   <form id="FormView" name="FormView" class="ui form" method="POST">
     {% block inputLogout %}{{ parent() }}{% endblock %}
   </form>
 </div>
+
 <script src="/dist/js/jquery-3.4.1.min.js"></script>
 <script src="/dist/js/md5.min.js"></script>
 <script src="/dist/semantic/semantic.min.js"></script>
-<script src="/dist/js/views/alunoView.js"></script>
+<script src="/dist/js/views/professorView.js"></script>
 {% endblock %}
