incluir namespace para as classes da api e revisar diretórios

--- a/app/views/loginView.html.twig
+++ b/app/views/loginView.html.twig
@@ -40,11 +40,11 @@
 				<input type="hidden" name="getNewRegister" id="getNewRegister" value="false">
 			</form>
 		</div>
-		<div class="logoAutor"><p>Este software é gratúito, disponível em <b class="pointer" id="nomeAutor">github.com/vaiola3/projeto-rosa-parks</b></p></div>
+		<div class="logoAutor"><p>Este software é gratuito, disponível em <b class="pointer" id="nomeAutor">github.com/vaiola3/projeto-rosa-parks</b></p></div>
 	</div>
 </div>
-<script src="/dist/js/jquery-3.4.1.min.js"></script>
-<script src="/dist/js/md5.min.js"></script>
-<script src="/dist/semantic/semantic.min.js"></script>
-<script src="/dist/js/views/loginView.js"></script>
+<script src="/public/dist/js/jquery-3.4.1.min.js"></script>
+<script src="/public/dist/js/md5.min.js"></script>
+<script src="/public/dist/semantic/semantic.min.js"></script>
+<script src="/public/src/js/views/loginView.js"></script>
 {% endblock %}
