--- a/app/views/registroView.html.twig
+++ b/app/views/registroView.html.twig
@@ -267,10 +267,10 @@
 	const user = "{{API_USER}}";
 	const pass = "{{API_PASS}}";
 </script>
-<script src="/dist/js/jquery-3.4.1.min.js"></script>
-<script src="/dist/js/jquery.mask.js"></script>
-<script src="/dist/js/md5.min.js"></script>
-<script src="/dist/semantic/semantic.min.js"></script>
-<script src="/dist/semantic/calendar.min.js"></script>
-<script src="/dist/js/views/registroView.js"></script>
+<script src="/public/dist/js/jquery-3.4.1.min.js"></script>
+<script src="/public/dist/js/jquery.mask.js"></script>
+<script src="/public/dist/js/md5.min.js"></script>
+<script src="/public/dist/semantic/semantic.min.js"></script>
+<script src="/public/dist/semantic/calendar.min.js"></script>
+<script src="/public/src/js/views/registroView.js"></script>
 {% endblock %}
