--- a/app/template/estrutura.html.twig
+++ b/app/template/estrutura.html.twig
@@ -5,17 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <link rel="stylesheet" type="text/css" href="/dist/semantic/semantic.min.css">        
-  <link rel="stylesheet" type="text/css" href="/dist/css/style.css">
-  <link rel="stylesheet" type="text/css" href="/dist/css/estrutura.css">
-  <link rel="icon" href="/img/logo-uneafro-small.jpg">
+  <link rel="stylesheet" type="text/css" href="/public/dist/semantic/semantic.min.css">        
+  <link rel="stylesheet" type="text/css" href="/public/src/css/style.css">
+  <link rel="stylesheet" type="text/css" href="/public/src/css/estrutura.css">
+  <link rel="icon" href="/public/img/logo-uneafro-small.jpg">
 
   <title>Cursinho Rosa Parks</title>
 </head>
 <body>
 
   <figure class="item-fixo superior-esquerdo pointer" id="logoUneafro">
-    <img src="/img/uneafro_peq.png">
+    <img src="/public/img/uneafro_peq.png">
   </figure>
 
   {% block botaoLogout %}
@@ -27,7 +27,7 @@
     </div>
   {% endblock %}
 
-  <div id="carregando" class="hide">
+  <div id="carregando" class="hide rosaparks-loading">
     <div class="ui active dimmer">
       <div class="ui massive text loader">Cursinho Rosa Parks</div>
     </div>
@@ -41,6 +41,6 @@
   {% endblock %}
 
 </body>
-<script src="/dist/js/template/estrutura.js"></script>
-<script src="/dist/js/forEach.js"></script>
+<script src="/public/src/js/template/estrutura.js"></script>
+<script src="/public/dist/js/forEach.js"></script>
 </html>
