remover cpf da tela de registro e atualizar dados do repositório do git

--- a/app/views/loginView.html.twig
+++ b/app/views/loginView.html.twig
@@ -40,7 +40,7 @@
 				<input type="hidden" name="getNewRegister" id="getNewRegister" value="false">
 			</form>
 		</div>
-		<div class="logoAutor"><p>Este software é gratuito, disponível em <b class="pointer" id="nomeAutor">github.com/vaiola3/projeto-rosa-parks</b></p></div>
+		<div class="logoAutor"><p>Essa aplicação é de código aberto, disponível em <b class="pointer" id="nomeAutor">github.com/discimus/projeto-rosa-parks</b></p></div>
 	</div>
 </div>
 <script src="/public/dist/js/jquery-3.4.1.min.js"></script>
