--- a/public/src/css/estrutura.css
+++ b/public/src/css/estrutura.css
@@ -10,7 +10,7 @@
 
 .superior-direito {
   top: 5vh;
-  right: 20vh !important;
+  right: 5vw !important;
 }
 
 .hide {
@@ -18,6 +18,14 @@
 }
 
 .rosaparks-loading {
+  position: fixed;
+
+  top: 0 !important;
+  
+  z-index: 99999 !important;
+
+  background-color: pink;
+
   width: 100vw;
   height: 100vh;
 }
